VP 10.5.0 Changelog
------------------------

- fix rubber triangulation issue leading to visual artifacts (especially in the editor) and rarely also weird physics behavior

- make exclusive fullscreen the new default when using Windows 10 build 1803 and above

- optionally make View->Script always show the script (see new option in Preferences->Editor Options) 
- make the Edit->Search/Select Element un-minimize if minimized when selected

- improve table exit performance (particularly when using Windows 10 build 1803)

- add RingDropOffset to the bumper element

- log message in debug window when PlaySound is called for a sound that's missing in the sound manager

- static table elements are now over-sampled/better anti-aliased and always rendered at highest detail level (latter only applicable for rubbers and ramps)
- rubbers now fully respect the element detail level slider, plus their hit shapes feature less triangles (=faster physics/collisions)

- update bumper base, ring and skirt with better meshes provided by flupper1

- fix Flipper element's EOS Torque and EOS Torque Angle and Elasticity and ElasticityFalloff and RampUp to be able to be changed by the script

- fix EOS Torque and EOS Torque Angle not overriding the table flipper settings when used via the global (flipper) physics sets

- add -EnableTrueFullscreen (force enables/overrides the true fullscreen video preference) to command line

- add VPTableStart broadcast message for frontends as notification that playfield should be shown

- throw balls in player: add support to change the default ball mass when throwing a ball. The user can also set the default ball mass in the editor options (menu: preferences)

- configurable global flipper physics sets: setting a negative value for a flipper physics setting in there will ignore that value and use the respective table flipper value instead
