@@ -267,10 +267,7 @@ void Bumper::UIRenderPass2(Sur * const psur)
 
 void Bumper::RenderBlueprint(Sur *psur, const bool solid)
 {
-   if (solid)
-      psur->SetFillColor(BLUEPRINT_SOLID_COLOR);
-   else
-      psur->SetFillColor(-1);
+   psur->SetFillColor(solid ? BLUEPRINT_SOLID_COLOR : -1);
    psur->SetBorderColor(RGB(0, 0, 0), false, 0);
    psur->SetObject(this);
    psur->SetObject(NULL);
