@@ -694,7 +694,7 @@ void Light::RenderDynamic(RenderDevice* pd3dDevice)
          pd3dDevice->classicLightShader->SetBool("hdrTexture0", offTexel->IsHDR());
          pd3dDevice->classicLightShader->SetTechnique(m_surfaceMaterial->m_bIsMetal ? "light_with_texture_isMetal" : "light_with_texture_isNotMetal");
          pd3dDevice->classicLightShader->SetTexture("Texture0", offTexel);
-         if (m_ptable->m_fReflectElementsOnPlayfield && !m_fBackglass)
+         if (m_ptable->m_fReflectElementsOnPlayfield && g_pplayer->m_pf_refl && !m_fBackglass)
          {
             pd3dDevice->SetRenderState(RenderDevice::ALPHABLENDENABLE, TRUE);
             pd3dDevice->SetRenderState(RenderDevice::SRCBLEND, D3DBLEND_ONE);
@@ -758,7 +758,7 @@ void Light::RenderDynamic(RenderDevice* pd3dDevice)
    else
       pd3dDevice->lightShader->End();
 
-   if (!m_d.m_BulbLight && offTexel != NULL && m_ptable->m_fReflectElementsOnPlayfield && !m_fBackglass)
+   if (!m_d.m_BulbLight && offTexel != NULL && m_ptable->m_fReflectElementsOnPlayfield && g_pplayer->m_pf_refl && !m_fBackglass)
    {
       pd3dDevice->SetRenderState(RenderDevice::ALPHABLENDENABLE, FALSE);
       pd3dDevice->SetRenderState(RenderDevice::SRCBLEND, D3DBLEND_SRCALPHA);
