@@ -1,6 +1,8 @@
 VP 10.5.0 Changelog
 ------------------------
 
+- add option to the global video preferences to disable reflections of dynamic elements on the playfield (to help lower end PC systems)
+
 - fix rubber triangulation issue leading to visual artifacts (especially in the editor) and rarely also weird physics behavior
 
 - make exclusive fullscreen the new default when using Windows 10 build 1803 and above
